--- a/CAs/Larger/style.css
+++ b/CAs/Larger/style.css
@@ -46,3 +46,7 @@ button:hover {
     background-color: #ff69b4;
     /* A darker shade of pink for hover effect */
 }
+
+.ruleIn{
+    width:50px;
+}
