--- a/CAs/Shared/style.css
+++ b/CAs/Shared/style.css
@@ -1,7 +1,6 @@
 /* General Body Styling */
-body{
+body {
     font-family: Arial, sans-serif;
-    font-size: 20px;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
@@ -21,25 +20,13 @@ body{
 canvas {
     display: block;
     margin: 20px auto;
-    border: 5px solid #ffffff;
-}
-
-
-.controlPanel {
-    display: block;
-    border: 1px solid #a08989;
-    margin: auto;
-    padding: 10px 10px;
-    background-color: #e6e6e6;
-    width: 700px;
-
+    border: 1px solid #ddd;
 }
 
 .centre {
     margin: auto;
+    width: 50%;
     padding: 10px;
-    display: block;
-    width:fit-content;
 }
 
 /* Button Styling */
@@ -48,11 +35,9 @@ button {
     color: white;
     border: none;
     padding: 10px 20px;
-    margin: 5px;
+    margin: 10px;
     cursor: pointer;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 900;
+    font-size: 16px;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
@@ -62,18 +47,6 @@ button:hover {
     /* A darker shade of pink for hover effect */
 }
 
-/* Input box styling*/
-input, select{
-    font-family: Arial, sans-serif;
-    font-size: 20px;
-    background-color: #ffffff;
-    border: 1px solid #a08989;
-    margin: 5px 0px;
-    padding: 5px 10px;
-}
-
-
 .ltlRuleIn{
     width:50px;
-    margin: 2px;
 }
